--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,18 @@
 cmake_minimum_required(VERSION 3.16)
+
+project(AutomodellerCPP VERSION 0.1 LANGUAGES C CXX)
+
+set(CMAKE_PREFIX_PATH
+    "C:/vcpkg/vcpkg/installed/x64-windows"
+    "C:/Qt/6.9.1/msvc2022_64"
+)
 if(WIN32)
     set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/vcpkg/scripts/buildsystems/vcpkg.cmake" CACHE STRING "")
 endif()
-project(AutomodellerCPP VERSION 0.1 LANGUAGES C CXX)
+
+if(POLICY CMP0167)
+  cmake_policy(SET CMP0167 OLD)
+endif()
 
 set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
@@ -14,14 +24,16 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql LinguistTools)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql LinguistTools)
 find_package(colmap REQUIRED)
-
+find_package(Eigen3 REQUIRED NO_MODULE)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-
 set(TS_FILES AutomodellerCPP_en_US.ts)
 
-if(WIN32)
-    set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/vcpkg/scripts/buildsystems")
-endif()
+
+
+
+#if(WIN32)
+   # set(CMAKE_TOOLCHAIN_FILE "C:/vcpkg/vcpkg/scripts/buildsystems")
+#endif()
 
 set(PROJECT_SOURCES
         main.cpp
@@ -73,9 +85,9 @@ endif()
 
 target_link_libraries(AutomodellerCPP PRIVATE
     Qt${QT_VERSION_MAJOR}::Widgets
-    Qt${QT_VERSION_MAJOR}::Sql
-    colmap::colmap
-)
+    Qt${QT_VERSION_MAJOR}::Sql)
+
+
 set_source_files_properties(miniz.c PROPERTIES LANGUAGE C)
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
